--- a/our-team/index.html
+++ b/our-team/index.html
@@ -47,6 +47,7 @@
             <div class="text-container">
                 <h2>Alina Beskrovna</h2>
                 <p>Alina Beskrovna is a first-year Master in Public Administration in International Development (MPA/ID) student at HKS. She also holds an M.Sc. in Applied Mathematics and an MBA in Finance. Alina has previously worked in financial analytics for supply chains and ran a startup development center under USAID.</p>
+                <a href=https://www.linkedin.com/in/abeskrovna/ target="_black" class="linkedin-button">LinkedIn</a>
             </div>
         </div>
     </div>
