added background text about project

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -10,7 +10,12 @@
     <body>
         <a href="../index.html", class="button-link-inactive">Home</a>
         <a href="index.html", class="button-link-active">Our Team</a>
-        <h1>About Us</h1>  
+        <h1>About Us</h1>
+
+        <p>Created for DPI-691M Programming and Data for Policymakers, a course at the Harvard Kennedy School (HKS), this project was developed by three HKS students in January 2024. The methodology for the project was in part based on a <a href="https://www.mediacloud.org/research/how-the-news-talked-about-the-israel-hamas-conflict-in-its-first-month">research project</a> by Ryan McGrady at Media Cloud.
+        </p>
+        
+        <br>
 
 <!-- Container for the images and bios -->
 <div class="container">
@@ -21,7 +26,7 @@
             <img src="luke-image.png" alt="Headshot of Luke" class="rounded-image">
             <div class="text-container">
                 <h2>Luke Schields</h2>
-                <p>Luke Schields is an Master in Public Policy student at the Harvard Kennedy School (HKS) where he is focusing on macroeconomic, energy, and trade policy. Prior to attending HKS, Luke worked for 3 years in the United States Senate where he worked on tax, finance, and energy policy.</p>
+                <p>Luke Schields is an Master in Public Policy student at the HKS where he is focusing on macroeconomic, energy, and trade policy. Prior to attending HKS, Luke worked for 3 years in the United States Senate where he worked on tax, finance, and energy policy.</p>
                 <a href=https://www.linkedin.com/in/luke-schields-03a32865/ target="_black" class="linkedin-button">LinkedIn</a>
             </div>
         </div>
