--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <a href="index.html", class="button-link-active">Home</a>
             <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
         </div>
-      
+
+        <!-- title-->
+
         <h1 class="centered">How the War in Ukraine is Portrayed <br> in the American Media</h1>
 
         <!-- introduction to research -->
@@ -42,6 +44,8 @@
                     <option value="Qjx9t">2023</option>
                 </select>
             </p>
+
+            <br>
 
             <!-- class for word chart -->
 
@@ -128,6 +132,8 @@
 
             <iframe title="Mentions of Ukraine across Top 10 Populated States" aria-label="Datawrapper visualization" src="https://datawrapper.dwcdn.net/NQAu8/" scrolling="no" frameborder="0" height="400" style="width: 0; min-width: 100%; border: none; height: 500px;"></iframe>
         </div>
+
+        <br><br><br>
 
         <div class="centered-clipped">
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfRWK-xJhCgE0AuhEanhjCo-SY2LvBo8aUzPg1v4YfPKf88Rw/viewform?embedded=true" scrolling="no" style="width: 0; min-width: 100%; border: none; height: 560px;" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
