--- a/regional_media.html
+++ b/regional_media.html
@@ -1,1 +1,15 @@
-<p>This worked!</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Regional Media</title>
+        <link href="../styles.css" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <a href="../index.html", class="button-link-inactive">Home</a>
+        <a href="index.html", class="button-link-active">Our Team</a>
+        <h1>Regional Media</h1>
+    </body>
+</html>
