created navigation from regional media

--- a/regional_media.html
+++ b/regional_media.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <a href="../index.html", class="button-link-inactive">Home</a>
-        <a href="index.html", class="button-link-active">Our Team</a>
+        <a href="regional_media.html", class="button-link-active">Regional Media</a>
+        <a href="index.html", class="button-link-inactive">Our Team</a>
         <h1>Regional Media</h1>
     </body>
 </html>
