--- a/our-team/index.html
+++ b/our-team/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <a href="../index.html", class="button-link-inactive">Home</a>
+        <a href="../regional_media.html", class="button-link-inactive">Regional Media</a>
         <a href="index.html", class="button-link-active">Our Team</a>
         <h1>About Us</h1>
 
