--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- top navigation bars -->
         <div class="nav">
             <a href="index.html", class="button-link-active">Home</a>
+            <a href="regional_media.html", class="button-link-inactive">Regional Media</a>
             <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
         </div>
 
@@ -70,11 +71,12 @@
 
             <br><br><br>
 
+
+            <!-- longitudinal charts -->
             <p class="centered">We also examined the volume of coverage the main three cable news networks dedicate to stories regarding Ukraine over the course of the war and compare it to the volume of stories about Ukraine mentioning either "corrupt", "Biden", or "Burisma". Surprisingly, all three outlets produce similar trends throughout their coverage.</p>
 
             <br><br><br>
 
-            <!-- longitudinal charts -->
             <!-- <p>Alina to add a little note explaining the results below here</p> -->
             <div class="longitudinal-charts">
                 <!-- chart 1 -->
