moved regional media to regional tab

--- a/regional_media.html
+++ b/regional_media.html
@@ -12,5 +12,15 @@
         <a href="regional_media.html", class="button-link-active">Regional Media</a>
         <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
         <h1>Regional Media</h1>
+
+ <!--state and local press -->
+        <div class="centered">
+            <h2>State and Local Press</h2>
+            <p>While the war in Ukraine is not covered as heavily in local media, we also wanted to discover whether there were trends in how the war is portrayed across different geographic regions within the United States. Below is a chart depicting the level of coverage by media outlets in the top 10 most populated states.</p>
+
+            <br><br><br>
+
+            <iframe title="Mentions of Ukraine across Top 10 Populated States" aria-label="Datawrapper visualization" src="https://datawrapper.dwcdn.net/NQAu8/" scrolling="no" frameborder="0" height="400" style="width: 0; min-width: 100%; border: none; height: 500px;"></iframe>
+        </div>
     </body>
 </html>
