--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
         <!-- top navigation bars -->
         <div class="nav">
             <a href="index.html", class="button-link-active">Home</a>
+            <a href="tv_media.html", class="button-link-inactive">Television Media</a>
             <a href="regional_media.html", class="button-link-inactive">Regional Media</a>
             <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
         </div>
 
-        <!-- title-->
 
+        <!-- title-->
         <h1 class="centered">How the War in Ukraine is Portrayed <br> in the American Media</h1>
 
         <!-- introduction to research -->
