--- a/our-team/index.html
+++ b/our-team/index.html
@@ -7,8 +7,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     </head>
+
+<!-- navigation buttons -->
     <body>
         <a href="../index.html", class="button-link-inactive">Home</a>
+        <a href="tv_media.html", class="button-link-inactive">Television Media</a>
         <a href="../regional_media.html", class="button-link-inactive">Regional Media</a>
         <a href="index.html", class="button-link-active">Our Team</a>
         <h1>About Us</h1>
