--- a/regional_media.html
+++ b/regional_media.html
@@ -7,8 +7,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     </head>
+
+<!-- navigation buttons -->
     <body>
         <a href="../index.html", class="button-link-inactive">Home</a>
+        <a href="tv_media.html", class="button-link-inactive">Telivision Media</a>
         <a href="regional_media.html", class="button-link-active">Regional Media</a>
         <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
         <h1>Regional Media</h1>
