--- a/our-team/index.html
+++ b/our-team/index.html
@@ -11,7 +11,7 @@
 <!-- navigation buttons -->
     <body>
         <a href="../index.html", class="button-link-inactive">Home</a>
-        <a href="tv_media.html", class="button-link-inactive">Television Media</a>
+        <a href="../tv_media.html", class="button-link-inactive">Television Media</a>
         <a href="../regional_media.html", class="button-link-inactive">Regional Media</a>
         <a href="index.html", class="button-link-active">Our Team</a>
         <h1>About Us</h1>
