updated tab on main page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="nav">
             <a href="index.html", class="button-link-active">Home</a>
             <a href="tv_media.html", class="button-link-inactive">Television Media</a>
+            <a href="national_press.html", class="button-link-inactive">National Press</a>
             <a href="regional_media.html", class="button-link-inactive">Regional Media</a>
             <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
         </div>
