--- a/national_press.html
+++ b/national_press.html
@@ -12,10 +12,11 @@
     <body>
     <div class="nav">
         <a href="../index.html", class="button-link-inactive">Home</a>
-        <a href="tv_media.html", class="button-link-active">Television Media</a>
+        <a href="tv_media.html", class="button-link-inactive">Television Media</a>
+        <a href="national_press.html", class="button-link-active">National Press</a>
         <a href="regional_media.html", class="button-link-inactive">Regional Media</a>
         <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
-        <h1>Television Media</h1>
+        <h1>National Press</h1>
     </div>
     </body>
 </html>
