--- a/our-team/index.html
+++ b/our-team/index.html
@@ -12,6 +12,7 @@
     <body>
         <a href="../index.html", class="button-link-inactive">Home</a>
         <a href="../tv_media.html", class="button-link-inactive">Television Media</a>
+        <a href="../national_press.html", class="button-link-inactive">National Press</a>
         <a href="../regional_media.html", class="button-link-inactive">Regional Media</a>
         <a href="index.html", class="button-link-active">Our Team</a>
         <h1>About Us</h1>
