--- a/regional_media.html
+++ b/regional_media.html
@@ -12,6 +12,7 @@
     <body>
         <a href="../index.html", class="button-link-inactive">Home</a>
         <a href="tv_media.html", class="button-link-inactive">Telivision Media</a>
+        <a href="national_press.html", class="button-link-inactive">National Press</a>
         <a href="regional_media.html", class="button-link-active">Regional Media</a>
         <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
         <h1>Regional Media</h1>
