--- a/tv_media.html
+++ b/tv_media.html
@@ -13,6 +13,7 @@
     <div class="nav">
         <a href="../index.html", class="button-link-inactive">Home</a>
         <a href="tv_media.html", class="button-link-active">Television Media</a>
+        <a href="national_press.html", class="button-link-inactive">National Press</a>
         <a href="regional_media.html", class="button-link-inactive">Regional Media</a>
         <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
         <h1>Television Media</h1>
