--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
             <p>On February 24, 2022, Russia launched a full-scale invasion of Ukraine. In response, many NATO member nations, including the United States, have sent financial, humanitarian, and military aid to Ukraine to support their efforts. As the war has played out, providing this aid has become a political football in the United States with the latest relief legislation failing in Congress in December 2023 after being panned by Republican Members of Congress. As support for providing aid to Ukraine begins to show cracks along ideological lines, we aim to investigate how the war in Ukraine is portrayed by media outlets across the political spectrum and how these may contribute to this development.</p>
         </div>
 
-        <hr>
+<!-- toggle fuction for references -->
 
-        <!-- national tv section -->
+
+
+<!-- national tv section -->
         <div class="national-tv">
             <h2 class="centered">American Network Television Media</h2>
 
