added a test wordcloud to the National Press page

--- a/national_press.html
+++ b/national_press.html
@@ -18,5 +18,9 @@
         <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
         <h1>National Press</h1>
     </div>
+
+
+    <img src="test-wordcloud.png" alt="2023 national media wordcloud">
+    
     </body>
 </html>
