--- a/national_press.html
+++ b/national_press.html
@@ -11,7 +11,7 @@
 <!-- navigation buttons -->
     <body>
     <div class="nav">
-        <a href="../index.html", class="button-link-inactive">Home</a>
+        <a href="index.html", class="button-link-inactive">Home</a>
         <a href="tv_media.html", class="button-link-inactive">Television Media</a>
         <a href="national_press.html", class="button-link-active">National Press</a>
         <a href="regional_media.html", class="button-link-inactive">Regional Media</a>
