--- a/regional_media.html
+++ b/regional_media.html
@@ -10,7 +10,7 @@
 
 <!-- navigation buttons -->
     <body>
-        <a href="../index.html", class="button-link-inactive">Home</a>
+        <a href="index.html", class="button-link-inactive">Home</a>
         <a href="tv_media.html", class="button-link-inactive">Telivision Media</a>
         <a href="national_press.html", class="button-link-inactive">National Press</a>
         <a href="regional_media.html", class="button-link-active">Regional Media</a>
