--- a/national_press.html
+++ b/national_press.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>TV Media</title>
-        <link href="../styles.css" rel="stylesheet" />
+        <link href="styles.css" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
