added how to use this chart content

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
             <p class="centered">The table below demonstrates how often each of the three main network news agencies used a specific word (left column) within three minutes of using the word "Ukraine" compared to the average of all three agencies. A high value indicates a network used the selected word more in comparison to the other networks, while a lower value indcates a network used the selected word less in comparison to the other networks. Each value represents how many standard deviations each networks value is from the average of all three networks. All data is cumulative by year.</p>
 
             <br><br><br>
+            <div class="call-out">
+                <p><strong>How to use this chart</strong></p>
+                <li>First select a year from which you would like to view data.</li>
+                <li>The chart will then present each networks relative useage of each word compared to the other networks.</li>
+                <li>To sort the data for a given network, click on the column's header and the data will sort in ascending or descending order on alternate clicks signified by the small arrow next to the network name.</li>
+                <li>Blue highlighted cells correspond to less relative useage of a word while red highlighted cells correspond to more relative useage.</li>
+            </div>
 
             <!-- word chart change by year -->
 
@@ -54,25 +61,7 @@
 
             <div class = "centered">
                 <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE" aria-label="Table" id="datawrapper-chart-Qjx9t" src="https://datawrapper.dwcdn.net/Da5oL" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="850"></iframe>
-            </div> 
-
-            <!-- word charts -->
-            <div class="iframe-triple-container">
-
-                <!-- <p>Alina to add a little note explaining the results below here</p> -->
-
-                <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE (2021)" aria-label="Table" id="datawrapper-chart-Da5oL" src="https://datawrapper.dwcdn.net/Da5oL/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="850" data-external="1"></iframe>
-
-                <!-- <p>Alina to add a little note explaining the results below here</p> -->
-
-                <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE (2022)" aria-label="Table" id="datawrapper-chart-4ma8G" src="https://datawrapper.dwcdn.net/4ma8G/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="850" data-external="1"></iframe>
-
-                <!-- <p>Alina to add a little note explaining the results below here</p> -->
-                <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE (2023)" aria-label="Table" id="datawrapper-chart-Qjx9t" src="https://datawrapper.dwcdn.net/Qjx9t/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="850" data-external="1">></iframe>
             </div>
-
-            <br><br><br>
-
 
             <!-- longitudinal charts -->
             <p class="centered">We also examined the volume of coverage the main three cable news networks dedicate to stories regarding Ukraine over the course of the war and compare it to the volume of stories about Ukraine mentioning either "corrupt", "Biden", or "Burisma". Surprisingly, all three outlets produce similar trends throughout their coverage.</p>
