added text explanation box for heat charts and download functionality for images

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <a href="regional_media.html", class="button-link-inactive">Regional Media</a>
             <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
         </div>
-
-
+        
         <!-- title-->
         <h1 class="centered">How the War in Ukraine is Portrayed <br> in the American Media</h1>
 
@@ -31,20 +30,23 @@
         <hr>
 
         <!-- national tv section -->
-        <div class="national-tv">
+        <div class="centered">
             <h2 class="centered">American Network Television Media</h2>
 
             <p class="centered">The table below demonstrates how often each of the three main network news agencies used a specific word (left column) within three minutes of using the word "Ukraine" compared to the average of all three agencies. A high value indicates a network used the selected word more in comparison to the other networks, while a lower value indcates a network used the selected word less in comparison to the other networks. Each value represents how many standard deviations each networks value is from the average of all three networks. All data is cumulative by year.</p>
 
-            <br><br><br>
-            <div class="call-out">
-                <p><strong>How to use this chart</strong></p>
-                <li>First select a year from which you would like to view data.</li>
-                <li>The chart will then present each networks relative useage of each word compared to the other networks.</li>
-                <li>To sort the data for a given network, click on the column's header and the data will sort in ascending or descending order on alternate clicks signified by the small arrow next to the network name.</li>
-                <li>Blue highlighted cells correspond to less relative useage of a word while red highlighted cells correspond to more relative useage.</li>
+            <br><br>
+
+            <div class="boxed">
+                <h3>How to use this Chart</h3>
+                <li>First, select the year from which you would like to view data.</li>
+                <li>The chart will display each network's relative useage for each word.</li>
+                <li>You can sort the chart for each network's values by clicking on the network name at the top of each column.</li>
+                <li>By clicking on the column header, you will sort the values for that column in either ascending or descending order on alternate clicks indicated by a small arrow to the left of each network name.</li>
+                <li>Red highlighted cells represent a higher value while blue highlighted cells represent a lower value.</li>
             </div>
 
+            <br><br><br>
             <!-- word chart change by year -->
 
             <p class="centered"><strong>Select Year:</strong>
