--- a/national_press.html
+++ b/national_press.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <script src="main.js" defer></script>
     </head>
 
 <!-- navigation buttons -->
@@ -21,6 +22,9 @@
 
 
     <img src="test-wordcloud.png" alt="2023 national media wordcloud">
+    <a href="test-wordcloud.png" download="test-wordcloud">
+    <button>Download Image</button>
+    <a>
     
     </body>
 </html>
