created copy button

--- a/index.html
+++ b/index.html
@@ -36,25 +36,37 @@
 
         <br>
 
-        <p class="centered">APA</p>
-       <body>
-        <div id="copyContainer">
-        <p id="textToCopy">T
-        Luke, S., Yushchyshyn, S., & Beskrovna, A. (2024, January 14). How the War in Ukraine is Portrayed in the American Media. https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
-        <button id="copyButton">Copy Text THIsS</button>
-        </div>
+     <!-- APA citation -->
+<p class="centered">APA</p>
+<div class="centered" id="copyContainerAPA">
+    <p class="centered" id="textToCopyAPA">Luke, S., Yushchyshyn, S., & Beskrovna, A. (2024, January 14). How the War in Ukraine is Portrayed in the American Media. https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
+    <button id="copyButtonAPA">Copy Citation</button>
+</div>
 
-        </body>
+<br>
 
-        <br>
+<!-- Chicago citation -->
+<p class="centered">Chicago</p>
+<div class="centered" id="copyContainerChicago">
+    <p class="centered" id="textToCopyChicago">Luke, Schields, Sly Yushchyshyn, and Alina Beskrovna. "How the War in Ukraine is Portrayed in the American Media." January 14, 2024. https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
+    <button id="copyButtonChicago">Copy Citation</button>
+</div>
 
-        <p class="centered">Chicago</p>
-        <p class="centered">this</p>
 
-        <br>
 
-        <p class="centered">MLA</p>
-        <p class="centered">this</p>
+
+
+        <!-- mla citation --> 
+<p class="centered">MLA</p>
+<body>
+    <div class="centered" id="copyContainer">
+    <p class="centered" id="textToCopy">Luke, Schields, Yushchyshyn, Sly, and Beskrovna, Alina. “How the War in Ukraine is Portrayed in the American Media.” https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
+    <button id="copyButton">Copy Citation</button>
+    </div>
+</body>
+
+
+
 
         <hr>
 
