fixed copy button for APA citation

--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
 
         <br>
 
-     <!-- APA citation -->
+<!--------- APA citation --------->
 <p class="centered">APA</p>
-<div class="centered" id="copyContainerAPA">
-    <p class="centered" id="textToCopyAPA">Luke, S., Yushchyshyn, S., & Beskrovna, A. (2024, January 14). How the War in Ukraine is Portrayed in the American Media. https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
+    <div class="centered" id="copyContainerAPA">
+        <p class="centered" id="textToCopyAPA">Luke, S., Yushchyshyn, S., & Beskrovna, A. (2024, January 14). How the War in Ukraine is Portrayed in the American Media. https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
     <button id="copyButtonAPA">Copy Citation</button>
 </div>
+
+
 
 <br>
 
@@ -56,11 +58,11 @@
 
 
 
-        <!-- mla citation --> 
+<!--------- mla citation ---------> 
 <p class="centered">MLA</p>
 <body>
     <div class="centered" id="copyContainer">
-    <p class="centered" id="textToCopy">Luke, Schields, Yushchyshyn, Sly, and Beskrovna, Alina. “How the War in Ukraine is Portrayed in the American Media.” https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
+    <p class="centered" id="textToCopy">Luke, Schields, Yushchyshyn, Sly, and Beskrovna, Alina. "How the War in Ukraine is Portrayed in the American Media." https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
     <button id="copyButton">Copy Citation</button>
     </div>
 </body>
