fixed copy button for all citations

--- a/index.html
+++ b/index.html
@@ -39,31 +39,27 @@
 <!--------- APA citation --------->
 <p class="centered">APA</p>
     <div class="centered" id="copyContainerAPA">
-        <p class="centered" id="textToCopyAPA">Luke, S., Yushchyshyn, S., & Beskrovna, A. (2024, January 14). How the War in Ukraine is Portrayed in the American Media. https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
+        <p class="centered" id="textToCopyAPA">Luke, S., Yushchyshyn, S., & Beskrovna, A. (2024, January 14). <em>How the War in Ukraine is Portrayed in the American Media.</em> code4policy. https://code4policy.com/2024-b3-Ukraine-media/index.html</p>
     <button id="copyButtonAPA">Copy Citation</button>
 </div>
 
-
-
 <br>
 
-<!-- Chicago citation -->
+<!---------  Chicago citation --------->
 <p class="centered">Chicago</p>
 <div class="centered" id="copyContainerChicago">
-    <p class="centered" id="textToCopyChicago">Luke, Schields, Sly Yushchyshyn, and Alina Beskrovna. "How the War in Ukraine is Portrayed in the American Media." January 14, 2024. https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
+    <p class="centered" id="textToCopyChicago">Luke, Schields, Sly Yushchyshyn, and Alina Beskrovna. "How the War in Ukraine is Portrayed in the American Media." code4policy. January 14, 2024. https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
     <button id="copyButtonChicago">Copy Citation</button>
 </div>
 
+<br>
 
-
-
-
-<!--------- mla citation ---------> 
+<!--------- MLA citation ---------> 
 <p class="centered">MLA</p>
 <body>
-    <div class="centered" id="copyContainer">
-    <p class="centered" id="textToCopy">Luke, Schields, Yushchyshyn, Sly, and Beskrovna, Alina. "How the War in Ukraine is Portrayed in the American Media." https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
-    <button id="copyButton">Copy Citation</button>
+    <div class="centered" id="copyContainerMLA">
+    <p class="centered" id="textToCopyMLA">Luke, Schields, Yushchyshyn, Sly, and Beskrovna, Alina. "How the War in Ukraine is Portrayed in the American Media." <em>code4policy</em>, 14 Jan. 2024, https://code4policy.com/2024-b3-Ukraine-media/index.html.</p>
+    <button id="copyButtonMLA">Copy Citation</button>
     </div>
 </body>
 
