included underlying data for heat chart and national media analysis and static images and created buttons to download each

--- a/national_press.html
+++ b/national_press.html
@@ -21,12 +21,7 @@
     </div>
 
 
-    <img src="test-wordcloud.png" alt="2023 national media wordcloud">
-    <a href="test-wordcloud.png" download="test-wordcloud">
-    <button>Download Image</button>
-    <a>
-
-    <!-- national press section -->
+        <!-- national press section -->
         <div class="national-press">
             <h2 class="centered">American National Press</h2>
 
@@ -42,8 +37,25 @@
                 <iframe title="PERCENTAGE OF COVERAGE FEATURING UKRAINE WITH MENTIONS OF CORRUPTION" aria-label="Interactive area chart" id="datawrapper-chart-MdeXf" src="https://datawrapper.dwcdn.net/MdeXf/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="356" data-external="1"></iframe>
                 <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
                 </script>
+                <div class="centered">
+                    <a href="percent_of_coverage_dedicated_to_ukraine_by_media_source_2023_base.png" download="percent_of_coverage_dedicated_to_ukraine_by_media_source_2023_base">
+                        <button class="dlbutton">Download Top Chart</button>
+                    </a>
+                    <a href="comparison_percent_of_coverage_dedicated_to_ukraine_by_media_source_2023_base.png" download="comparison_percent_of_coverage_dedicated_to_ukraine_by_media_source_2023_base">
+                        <button class="dlbutton">Download Bottom Chart</button>
+                    </a>
+                    <a href="comparison_media_sources.csv" download="comparison_media_sources.csv">
+                    <button class="dlbutton">Download Underlying Data</button>
+                    </a>
+                </div>
             </div>
-        </div>
-    
+
+            <div class="centered">
+                <img src="test-wordcloud.png" alt="2023 national media wordcloud">
+                <a href="test-wordcloud.png" download="test-wordcloud">
+                <button class="dlbutton">Download Image</button></a>
+                <button class="dlbutton">Download Underlying Data</button>
+            </div>
+        </div> 
     </body>
 </html>
