--- a/tv_media.html
+++ b/tv_media.html
@@ -53,6 +53,13 @@
             <div class = "centered">
                 <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE" aria-label="Table" id="datawrapper-chart-Qjx9t" src="https://datawrapper.dwcdn.net/Da5oL" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="850"></iframe>
             </div>
+            <div class="centered">
+                <a href="word_analysis.xlsx" download="word_analysis.xlsx">
+                <button class="dlbutton">Download Underlying Data</button>
+                </a>
+            </div>
+
+            <hr>
 
             <!-- longitudinal charts -->
             <p class="centered">We also examined the volume of coverage the main three cable news networks dedicate to stories regarding Ukraine over the course of the war and compare it to the volume of stories about Ukraine mentioning either "corrupt", "Biden", or "Burisma". Surprisingly, all three outlets produce similar trends throughout their coverage.</p>
