--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         <!-- title-->
         <h1 class="centered">How the War in Ukraine is Portrayed <br> in the American Media</h1>
+        <h4 class="centered">By Luke Schields, Sly Yushchyshyn, and Alina Beskrovna</h4>
 
         <!-- introduction to research -->
         <div class="centered">
@@ -62,9 +63,7 @@
     </div>
 </body>
 
-        <hr>
-
-        <hr>
+<hr>
 
 <!-- feedback form -->
         <div class="centered-clipped">
