added better explanation of heat charts in tv_media and 3 key takeaways

--- a/tv_media.html
+++ b/tv_media.html
@@ -22,7 +22,27 @@
         <div class="centered">
             <h2 class="centered">American Network Television Media</h2>
 
-            <p class="centered">The table below demonstrates how often each of the three main network news agencies used a specific word (left column) within three minutes of using the word "Ukraine" compared to the average of all three agencies. A high value indicates a network used the selected word more in comparison to the other networks, while a lower value indcates a network used the selected word less in comparison to the other networks. Each value represents how many standard deviations each networks value is from the average of all three networks. All data is cumulative by year.</p>
+            <p class="centered">While most major network television new sources have covered the war in Ukraine, not all coverage is the same. Different stations have different agendas and their coverage of events is colored by these biases. The table below analyzes the coverage of Ukraine by the three main network television sources by examining their relative use of seleted words included in their coverage of Ukraine.</p>
+
+            <br>
+
+            <p class="centered">To examine this, we developed a list of words that might signal the tone or context of a given story on Ukraine (left column). We then gathered data totaling how many times each station included this word within 3 minutes of using the word "Ukraine". Using these totals, we determined the average useage of each word across all three stations by year and the standard deviation of the three values. Standard deviation is a common statistical measure of the spread of values in a given set of values, think: the average distance of each value in a set from the average. The values depicted in the table below indicate each stations distance, measured in standard deviation, away from the average of all three, also known as a z-score.</p>
+
+            <br>
+
+            <p class="centered"> <strong>Put simply, extreme values (more than 1 or less than -1) indicate a station used this word much more frequently or much less frequently than the average of all three stations.</strong> Higher values mean a network used a word more frequently in association with the word "Ukraine" than the average across the three networks. All data is cumulative by year. To examine the underlying data, download the excel below.</p>
+
+            <br><br>
+
+            <h3 class="centered" style="color:black">Key Takeaways</h3>
+            
+            <br>
+
+            <li>In 2023, Fox News used words like "Burisma", "Hunter" (Biden), "corrupt", and "nazi" much more frequently than  CNN or MSNBC.</li>
+            <br>
+            <li>In 2023, CNN used words like "relief", "invasion", and "investigation" much more frequently than Fox News or MSNBC.</li>
+            <br>
+            <li>In 2023, MSNBC use words like "aid", "Putin", and "conflict" much less frequently than Fox News or CNN.</li>
 
             <br><br>
 
